all /users verbs implemented NOT ALREADY TESTED. Next is check on stask.solution fields
